[package]
name = "google-banner-palette"
version = "0.1.0"
authors = ["Christian Blades <cblades@pindrop.com>"]

[dependencies]
exoquant = "0.2.0"
image = "0.19.0"
hyper = "0.12.5"
hyper-rustls = "0.13.0"
kuchiki = "0.7.0"
tokio = "0.1.7"
termion = "1.5.1"
serde_json = "1.0"
serde_derive = "1.0.69"
toml = "0.4.6"
serde = "1.0.69"
clap = "2.23.0"
futures = "0.1"